--- a/android/res/layout/login.xml
+++ b/android/res/layout/login.xml
@@ -12,13 +12,13 @@
         android:orientation="vertical" >
 
         <EditText
-            android:id="@+id/username_et"
+            android:id="@+id/email_et"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin"
             android:layout_marginRight="@dimen/margin"
             android:background="@drawable/edittext_top_rounded_selector"
-            android:hint="@string/username"
+            android:hint="@string/email"
             android:maxLines="1"
             android:textSize="@dimen/text_size_edittext" />
 
