--- a/android/res/drawable/background.xml
+++ b/android/res/drawable/background.xml
@@ -2,11 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
+    <!--
     <gradient
         android:angle="270"
         android:centerX="@color/blue_medium"
-        android:endColor="@color/blue_light"
-        android:startColor="@color/blue_dark" />
+        android:endColor="@color/blue_dark"
+        android:startColor="@color/blue_light" />
+    -->
+
+    <solid android:color="#F5F5F5" />
 
     <corners
         android:bottomLeftRadius="5dp"
