--- a/android/res/drawable/btn_full_rounded_pressed.xml
+++ b/android/res/drawable/btn_full_rounded_pressed.xml
@@ -2,16 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/blue_dark" />
 
     <corners
         android:bottomLeftRadius="@dimen/round"
         android:bottomRightRadius="@dimen/round"
-        android:topLeftRadius="0dp"
-        android:topRightRadius="0dp" />
+        android:topLeftRadius="@dimen/round"
+        android:topRightRadius="@dimen/round" />
 
     <stroke
-        android:width="@dimen/border_width"
-        android:color="@color/input_border" />
+        android:width="@dimen/border_width_focused"
+        android:color="@color/blue_dark" />
 
 </shape>
