--- a/android/res/drawable/edittext_bottom_rounded_disable.xml
+++ b/android/res/drawable/edittext_bottom_rounded_disable.xml
@@ -5,19 +5,13 @@
     <solid android:color="@color/blue_dark" />
 
     <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
+        android:bottomLeftRadius="@dimen/round"
+        android:bottomRightRadius="@dimen/round"
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp" />
 
-    <padding
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp" />
-
     <stroke
-        android:width="1px"
-        android:color="@color/blue_dark" />
+        android:width="@dimen/border_width"
+        android:color="@color/input_border" />
 
 </shape>
