--- a/android/res/drawable/edittext_top_rounded.xml
+++ b/android/res/drawable/edittext_top_rounded.xml
@@ -7,17 +7,11 @@
     <corners
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp" />
-
-    <padding
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp" />
+        android:topLeftRadius="@dimen/round"
+        android:topRightRadius="@dimen/round" />
 
     <stroke
-        android:width="1px"
-        android:color="@color/blue_dark" />
+        android:width="@dimen/border_width"
+        android:color="@color/input_border" />
 
 </shape>
