--- a/android/res/drawable/btn_full_rounded_selector.xml
+++ b/android/res/drawable/btn_full_rounded_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/btn_full_rounded" android:state_enabled="true" android:state_window_focused="false"/>
-    <item android:drawable="@drawable/btn_full_rounded" android:state_enabled="false" android:state_window_focused="false"/>
+    <item android:drawable="@drawable/btn_full_rounded_disable" android:state_enabled="false"/>
     <item android:drawable="@drawable/btn_full_rounded_pressed" android:state_pressed="true"/>
     <item android:drawable="@drawable/btn_full_rounded_focused" android:state_enabled="true" android:state_focused="true"/>
     <item android:drawable="@drawable/btn_full_rounded" android:state_enabled="true"/>
