--- a/android/res/drawable/edittext_no_rounded.xml
+++ b/android/res/drawable/edittext_no_rounded.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/blue_dark" />
+    <solid android:color="@android:color/white" />
 
     <corners
-        android:bottomLeftRadius="@dimen/round"
-        android:bottomRightRadius="@dimen/round"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp" />
 
