--- a/android/res/layout/login.xml
+++ b/android/res/layout/login.xml
@@ -18,7 +18,8 @@
             android:layout_marginLeft="@dimen/margin"
             android:layout_marginRight="@dimen/margin"
             android:background="@drawable/edittext_top_rounded_selector"
-            android:hint="@string/email"
+            android:hint="@string/email_hint"
+            android:inputType="textEmailAddress"
             android:maxLines="1"
             android:textSize="@dimen/text_size_edittext" />
 
@@ -29,7 +30,7 @@
             android:layout_marginLeft="@dimen/margin"
             android:layout_marginRight="@dimen/margin"
             android:background="@drawable/edittext_bottom_rounded_selector"
-            android:hint="@string/password"
+            android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:maxLines="1"
             android:textSize="@dimen/text_size_edittext" />
@@ -40,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin"
             android:background="@drawable/btn_full_rounded_selector"
+            android:enabled="false"
             android:padding="@dimen/btn_padding"
             android:text="@string/login"
             android:textColor="@android:color/white"
@@ -58,7 +60,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/new_to_cloudy_phone"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="@dimen/text_size_small" />
 
         <Button
