add green rounded button, change button's padding, looks great :)

--- a/android/res/layout/login.xml
+++ b/android/res/layout/login.xml
@@ -40,8 +40,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin"
-            android:background="@drawable/btn_full_rounded_selector"
-            android:padding="@dimen/btn_padding"
+            android:background="@drawable/btn_blue_full_rounded_selector"
+            android:paddingBottom="@dimen/btn_padding_bottom"
+            android:paddingLeft="@dimen/btn_padding_left"
+            android:paddingRight="@dimen/btn_padding_right"
+            android:paddingTop="@dimen/btn_padding_top"
             android:text="@string/login"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_small" />
@@ -67,8 +70,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin"
-            android:background="@drawable/btn_full_rounded_selector"
-            android:padding="@dimen/btn_padding"
+            android:background="@drawable/btn_green_full_rounded_selector"
+            android:paddingBottom="@dimen/btn_padding_bottom"
+            android:paddingLeft="@dimen/btn_padding_left"
+            android:paddingRight="@dimen/btn_padding_right"
+            android:paddingTop="@dimen/btn_padding_top"
             android:text="@string/create_new_account"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_small" />
