--- a/android/res/layout/signup.xml
+++ b/android/res/layout/signup.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:gravity="center"
         android:orientation="vertical" >
 
@@ -52,8 +52,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin"
-            android:background="@drawable/btn_full_rounded_selector"
-            android:padding="@dimen/btn_padding"
+            android:background="@drawable/btn_blue_full_rounded_selector"
+            android:paddingBottom="@dimen/btn_padding_bottom"
+            android:paddingLeft="@dimen/btn_padding_left"
+            android:paddingRight="@dimen/btn_padding_right"
+            android:paddingTop="@dimen/btn_padding_top"
             android:text="@string/register"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_small" >
